# ocpl

./: ocpl.rosinstall
ocpl_benchmark/: CMakeLists.txt  package.xml
ocpl_benchmark/include/ocpl_benchmark/: benchmark.h  data_logger.h  timer.h
ocpl_benchmark/src/: benchmark.cpp  data_logger.cpp  timer.cpp
ocpl_graph/: CMakeLists.txt  package.xml
ocpl_graph/include/ocpl_graph/: containers.h  graph.h  tree.h
ocpl_graph/src/: graph.cpp  tree.cpp
ocpl_graph/test/: test_containers.cpp  test_graph.cpp  test_graph_search.cpp
ocpl_planning/: CMakeLists.txt  package.xml
ocpl_planning/include/ocpl_planning/: acro_planner.h  containers.h  cost_functions.h  everything.h  factories.h  generic_attempt.h  io.h  jdm.h  math.h  oriolo.h  planner2.h  planner_base.h  planners.h  prm.h  quispe.h  sample_space.h  settings.h  thread_save_logging.h  types.h
ocpl_planning/launch/: demo.launch
ocpl_planning/src/: acro_planner.cpp  acro_planner_samplers.cpp  factories.cpp  io.cpp  jdm.cpp  oriolo.cpp  planner2.cpp  planner_base.cpp  planners.cpp  prm.cpp  quispe.cpp  sample_space.cpp
ocpl_planning/test/: test_generic_planner.cpp  test_io.cpp  test_oriolo.cpp  test_planner_base.cpp
ocpl_ros/: CMakeLists.txt  package.xml
ocpl_ros/benchmarks/: benchmark1.cpp  benchmark2.cpp  benchmark3.cpp  benchmark5.cpp
ocpl_ros/data/: all_settings.txt  benchmark1_file_names.txt  benchmark_case_2.csv  case2_default.yaml  coffee.yaml  global1.yaml  greedy1.yaml  grid2.yaml  halfopen_box.csv  halfopen_box1.yaml  halton1.yaml  halton2.yaml  hello.csv  kingpin2.csv  kuka1.yaml  local1.yaml  local2.yaml  local_dfs.yaml  oriolo1.txt  puzzle_descartes.csv  settings1.txt  test.csv  test_settings.txt  text.csv
ocpl_ros/data/benchmark2/: halton_incremental.yaml
ocpl_ros/data/benchmark5/: names.txt  random_gpq.yaml  random_gs.yaml  random_ls.yaml  random_lspq.yaml
ocpl_ros/data/kuka/: filename_list.txt  halton.yaml  kuka1.yaml  kuka3.yaml  kuka4.yaml  kuka5.yaml  kuka_gpq.yaml  kuka_gs.yaml  random.yaml
ocpl_ros/data/kuka_on_rail/: grid.yaml  halton_fixed.yaml  names.txt  random_fixed.yaml
ocpl_ros/data/sp/: grid1.yaml  halton_fixed.yaml  halton_incremental.yaml  names.txt  random_fixed.yaml  random_incremental.yaml  sample_settings.txt
ocpl_ros/demos/: demo.cpp  demo_redundant.cpp  dfs.cpp  kuka.cpp  kuka_on_rail.cpp  oriolo.cpp  play_path.cpp  prm_demo.cpp  rotation_table.cpp  welding.cpp  welding_redundant.cpp
ocpl_ros/include/ocpl_ros/: io.h  moveit_robot.h  moveit_robot_examples.h  planar_3r_ik.h  rviz.h  threadsafe_state_storage.h
ocpl_ros/include/ocpl_ros/planning_cases/: case1.h  case2.h  case3.h  halfopen_box.h  l_profile.h  puzzle.h  teapot.h  text.h  util.h
ocpl_ros/launch/: demo.launch
ocpl_ros/scripts/: load_collision_objects.py  load_from_urdf.py  test_planning_server.py
ocpl_ros/src/: demo.cpp  demo_redundant.cpp  io.cpp  moveit_robot.cpp  moveit_robot_examples.cpp  planning_server.cpp  rviz.cpp  show_task.cpp  threadsave_state_storage.cpp
ocpl_ros/test/: test_io.cpp
ocpl_sampling/: CMakeLists.txt  package.xml
ocpl_sampling/demos/: discrepancy.cpp
ocpl_sampling/include/ocpl_sampling/: grid_sampler.h  halton_sampler.h  random_sampler.h  sampler.h
ocpl_sampling/src/: grid_sampler.cpp  halton_sampler.cpp  random_sampler.cpp  sampler.cpp
ocpl_sampling/test/: test_sampling.cpp
ocpl_tsr/: CMakeLists.txt  package.xml
ocpl_tsr/include/ocpl_tsr/: task_space_regions.h
ocpl_tsr/src/: task_space_regions.cpp
ocpl_tsr/test/: test_tsr.cpp
