<?xml version="1.0"?>
<package format="2">
  <name>ocpl_benchmark</name>
  <version>0.0.1</version>
  <description>The ocpl_benchmark package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jeroen.demaeyer@kuleuven.be">jeroendm</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ocpl_benchmark</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ocpl_planning</build_depend>
  <build_depend>ocpl_tsr</build_depend>
  <build_export_depend>ocpl_planning</build_export_depend>
  <build_export_depend>ocpl_tsr</build_export_depend>
  <exec_depend>ocpl_planning</exec_depend>
  <exec_depend>ocpl_tsr</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
