<?xml version="1.0"?>
<package format="2">
  <name>ocpl_graph</name>
  <version>0.0.1</version>
  <description>The ocpl_graph package</description>

  <maintainer email="jeroen.demaeyer@kuleuven.be">jeroen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
