<?xml version="1.0"?>
<package format="2">
  <name>ocpl_ros</name>
  <version>0.0.1</version>
  <description>The ocpl_ros package</description>

  <maintainer email="jeroen.demaeyer@kuleuven.be">jeroen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>ocpl_sampling</depend>
  <depend>ocpl_graph</depend>
  <depend>ocpl_tsr</depend>
  <depend>ocpl_planning</depend>
  <depend>ocpl_benchmark</depend>

  <export>
  </export>
</package>
