<?xml version="1.0"?>
<package format="2">
  <name>ocpl_sampling</name>
  <version>0.0.1</version>
  <description>The ocpl_sampling package</description>

  <maintainer email="jeroen.demaeyer@kuleuven.be">jeroen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
